@@ -19,6 +19,8 @@
 
 package org.apache.cayenne.dba.mysql;
 
+import java.sql.Types;
+
 import org.apache.cayenne.di.AdhocObjectFactory;
 import org.apache.cayenne.di.Inject;
 import org.apache.cayenne.map.DbAttribute;
@@ -28,11 +30,12 @@ import org.apache.cayenne.unit.di.server.ServerCase;
 import org.apache.cayenne.unit.di.server.UseServerRuntime;
 import org.junit.Test;
 
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
 @UseServerRuntime(CayenneProjects.TESTMAP_PROJECT)
 public class MySQLAdapterIT extends ServerCase {
-    
+
     @Inject
     private AdhocObjectFactory objectFactory;
 
@@ -66,5 +69,53 @@ public class MySQLAdapterIT extends ServerCase {
         assertTrue(b2.indexOf("PK1") > 0);
         assertTrue(b2.indexOf("PK2") > 0);
         assertTrue(b2.indexOf("PK1") > b2.indexOf("PK2"));
+    }
+
+    @Test
+    public void testCreateTableAppendColumnWithTimeAndTimestamp() {
+        MySQLAdapter adapter = objectFactory.newInstance(
+                MySQLAdapter.class,
+                MySQLAdapter.class.getName());
+
+        DbEntity e = new DbEntity("Test");
+        DbAttribute dblPrec1 = new DbAttribute("dbl1");
+        dblPrec1.setType(Types.TIMESTAMP);
+        dblPrec1.setScale(3);
+        e.addAttribute(dblPrec1);
+
+        DbAttribute dblPrec2 = new DbAttribute("dbl2");
+        dblPrec2.setType(Types.TIME);
+        dblPrec2.setScale(6);
+        e.addAttribute(dblPrec2);
+
+        String sql = adapter.createTable(e);
+
+        // CAY-2694.
+        assertTrue(sql.indexOf("TIME(6)") > 0);
+        assertTrue(sql.indexOf("DATETIME(3)") > 0);
+        assertEquals("CREATE TABLE Test (dbl1 DATETIME(3) NULL, dbl2 TIME(6) NULL) ENGINE=InnoDB", sql);
+    }
+
+    @Test
+    public void testCreateTableAppendColumnWithTimeAndTimestampWihoutScale() {
+        MySQLAdapter adapter = objectFactory.newInstance(
+                MySQLAdapter.class,
+                MySQLAdapter.class.getName());
+
+        DbEntity e = new DbEntity("Test");
+        DbAttribute dblPrec1 = new DbAttribute("dbl1");
+        dblPrec1.setType(Types.TIMESTAMP);
+        e.addAttribute(dblPrec1);
+
+        DbAttribute dblPrec2 = new DbAttribute("dbl2");
+        dblPrec2.setType(Types.TIME);
+        e.addAttribute(dblPrec2);
+
+        String sql = adapter.createTable(e);
+
+        // CAY-2694.
+        assertTrue(sql.indexOf("TIME") > 0);
+        assertTrue(sql.indexOf("DATETIME") > 0);
+        assertEquals("CREATE TABLE Test (dbl1 DATETIME NULL, dbl2 TIME NULL) ENGINE=InnoDB", sql);
     }
 }
